log_output/manifests/hashgenerator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: hashgenerator
          image: waltherbeach/hashgenerator:26-01-11
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config/information.txt
              subPath: "information.txt"
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
